# summarizer

./: Cargo.toml
src/: lib.rs  main.rs
static/: index.html
