[package]
name = "summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.16.3"
axum = "0.6.20"
rust-embed = "8.0.0"
serde = { version = "1.0.193", features = ["derive"] }
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-secrets = "0.33.0"
tokio = "1.28.2"
tracing = "0.1.40"
