[package]
name = "summarizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["std"] }
async-openai = "0.16.3"
axum = "0.6.20"
lazy_static = "1.4.0"
rust-embed = "8.0.0"
serde = { version = "1.0.193", features = ["derive"] }
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
shuttle-secrets = "0.33.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.4"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
